--- a/orders/package.json
+++ b/orders/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "auth",
+  "name": "orders",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev src/index.ts",
+    "start": "ts-node-dev --poll src/index.ts",
     "test": "jest --watchAll --no-cache"
   },
   "jest": {
@@ -18,12 +18,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@kmticketes/common": "^1.0.4",
+    "@kmticketes/common": "^1.0.10",
     "@types/cookie-session": "^2.0.39",
     "@types/express": "^4.17.5",
     "@types/express-serve-static-core": "^4.17.18",
     "@types/jsonwebtoken": "^8.3.8",
     "@types/mongoose": "^5.7.8",
+    "@types/serve-static": "^1.13.9",
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
