--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@kmticketes/common": "^1.0.9",
+    "@kmticketes/common": "^1.0.14",
     "@types/cookie-session": "^2.0.39",
     "@types/express": "^4.17.5",
     "@types/express-serve-static-core": "^4.17.18",
@@ -31,6 +31,7 @@
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.8.3"
   },
